// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenBadge snapshots the lg size 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 999,
        "shadowColor": "#fbbf24",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 14,
      },
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        654032676,
        349796102,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "rgba(251,191,36,0.45)",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 6,
        },
        {
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={20}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx="35%"
            cy="30%"
            fx="35%"
            fy="30%"
            gradient={
              [
                0,
                -137590,
                0.6,
                -278748,
                1,
                -4959479,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="cb-coin-4"
            rx="70%"
            ry="70%"
          />
        </RNSVGDefs>
        <RNSVGCircle
          cx="10"
          cy="10"
          fill={
            {
              "brushRef": "cb-coin-4",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          r="9"
          stroke={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          strokeWidth="0.6"
        />
        <RNSVGCircle
          cx="10"
          cy="10"
          fill={null}
          opacity={0.5}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          r="6.5"
          stroke={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          strokeWidth="0.6"
        />
        <RNSVGText
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          font={
            {
              "fontFamily": "ChakraPetch-Bold",
              "fontSize": 8.5,
              "fontWeight": "900",
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              "10",
            ]
          }
          y={
            [
              "13.5",
            ]
          }
        >
          <RNSVGTSpan
            content="C"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        [
          {},
          [
            {
              "color": "#fbbf24",
              "fontFamily": "JetBrainsMono-Bold",
              "fontWeight": "700",
              "letterSpacing": 0.28,
            },
            {
              "fontSize": 18,
            },
          ],
        ]
      }
    >
      420
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`TokenBadge snapshots the md size 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 999,
        "shadowColor": "#fbbf24",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 14,
      },
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        654032676,
        349796102,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "rgba(251,191,36,0.45)",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 6,
        },
        {
          "paddingHorizontal": 12,
          "paddingVertical": 5,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={16}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx="35%"
            cy="30%"
            fx="35%"
            fy="30%"
            gradient={
              [
                0,
                -137590,
                0.6,
                -278748,
                1,
                -4959479,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="cb-coin-3"
            rx="70%"
            ry="70%"
          />
        </RNSVGDefs>
        <RNSVGCircle
          cx="10"
          cy="10"
          fill={
            {
              "brushRef": "cb-coin-3",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          r="9"
          stroke={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          strokeWidth="0.6"
        />
        <RNSVGCircle
          cx="10"
          cy="10"
          fill={null}
          opacity={0.5}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          r="6.5"
          stroke={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          strokeWidth="0.6"
        />
        <RNSVGText
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          font={
            {
              "fontFamily": "ChakraPetch-Bold",
              "fontSize": 8.5,
              "fontWeight": "900",
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              "10",
            ]
          }
          y={
            [
              "13.5",
            ]
          }
        >
          <RNSVGTSpan
            content="C"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        [
          {},
          [
            {
              "color": "#fbbf24",
              "fontFamily": "JetBrainsMono-Bold",
              "fontWeight": "700",
              "letterSpacing": 0.28,
            },
            {
              "fontSize": 14,
            },
          ],
        ]
      }
    >
      420
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;

exports[`TokenBadge snapshots the sm size 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 999,
        "shadowColor": "#fbbf24",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 14,
      },
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoLinearGradient
    colors={
      [
        654032676,
        349796102,
      ]
    }
    endPoint={
      [
        0.5,
        1,
      ]
    }
    startPoint={
      [
        0.5,
        0,
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "rgba(251,191,36,0.45)",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 6,
        },
        {
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      vbHeight={20}
      vbWidth={20}
      width={14}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx="35%"
            cy="30%"
            fx="35%"
            fy="30%"
            gradient={
              [
                0,
                -137590,
                0.6,
                -278748,
                1,
                -4959479,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="cb-coin-2"
            rx="70%"
            ry="70%"
          />
        </RNSVGDefs>
        <RNSVGCircle
          cx="10"
          cy="10"
          fill={
            {
              "brushRef": "cb-coin-2",
              "type": 1,
            }
          }
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          r="9"
          stroke={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          strokeWidth="0.6"
        />
        <RNSVGCircle
          cx="10"
          cy="10"
          fill={null}
          opacity={0.5}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          r="6.5"
          stroke={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          strokeWidth="0.6"
        />
        <RNSVGText
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4286067983,
              "type": 0,
            }
          }
          font={
            {
              "fontFamily": "ChakraPetch-Bold",
              "fontSize": 8.5,
              "fontWeight": "900",
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              "10",
            ]
          }
          y={
            [
              "13.5",
            ]
          }
        >
          <RNSVGTSpan
            content="C"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        [
          {},
          [
            {
              "color": "#fbbf24",
              "fontFamily": "JetBrainsMono-Bold",
              "fontWeight": "700",
              "letterSpacing": 0.28,
            },
            {
              "fontSize": 12,
            },
          ],
        ]
      }
    >
      420
    </Text>
  </ViewManagerAdapter_ExpoLinearGradient>
</View>
`;
